# elevator

./: .gitignore  README.md  specification.docx
elevator/: CMakeLists.txt  main.cpp
